# noracle

./: .env  Cargo.toml  db.sqlite3
migrations/2018-08-12-155325_create_prediction_events/: down.sql  up.sql
src/: db.rs  debug.rs  main.rs  models.rs  schema.rs
src/operations/: mod.rs  outcomes.rs  prediction_events.rs  transactions.rs  users.rs
src/routes/: debug.rs  mod.rs  outcomes.rs
