cargo-features = ["edition"]

[package]
name = "noracle"
version = "0.1.0"
edition = '2018'
authors = ["Zelda Hessler <zelda.hessler@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "^0.7"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3", default-features = false, features = ["sqlite", "chrono"] }
dotenv = "0.13"
env_logger = "*"
failure = "0.1"
futures = "0.1"
json = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"